samples/_failures_safe/1761044922_306060_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5c3b96f2.c: In function ‘main’:
./samples/SAFE/__tmp_5c3b96f2.c:148:12: error: missing terminating " character
  148 |     printf("
      |            ^
./samples/SAFE/__tmp_5c3b96f2.c:148:5: error: expected expression at end of input
  148 |     printf("
      |     ^~~~~~
./samples/SAFE/__tmp_5c3b96f2.c:148:5: error: expected declaration or statement at end of input
